[package]
edition = "2021"
name = "levels"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "levels"

[bindings.swift]
cdylib_name = "levels"
omit_argument_labels = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# audio
cpal = "0.13"

# ring buffer
rtrb = "0.2"

# channels  
crossbeam-channel = "0.5"

# logging
env_logger = "0.9"
log = "0.4"

# error handling
color-eyre = "0.5"
eyre = "0.6"
thiserror = "1.0"

# ffi
uniffi = "0.16"
uniffi_macros = "0.16"

[build-dependencies]
uniffi_build = "0.16"
